<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity"
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/calc_history"
        tools:text="22 - 33 =" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="12dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/calc_result"
        tools:text="-11" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="*"
        android:layout_margin="2dp"
        >

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btnPercent"
                style="@style/ButtonOperation"
                android:text="@string/btn_percent_text"
                />
            <Button
                android:id="@+id/btnClearE"
                style="@style/ButtonOperation"
                android:text="@string/btn_clearE_text"
                />
            <Button
                android:id="@+id/btnClear"
                style="@style/ButtonOperation"
                android:text="@string/btn_clear_text"
                />
            <Button
                android:id="@+id/btnBackspace"
                style="@style/ButtonOperation"
                android:text="@string/btn_backspace_text"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center" >
            <Button
                android:id="@+id/btnInverse"
                style="@style/ButtonOperation"
                android:text="@string/btn_inverse_text" />
            <Button
                android:id="@+id/btnSquare"
                style="@style/ButtonOperation"
                android:text="@string/btn_square_text"
                />
            <Button
                android:id="@+id/btnSqrt"
                style="@style/ButtonOperation"
                android:text="@string/btn_sqrt_text"
                />
            <Button
                android:id="@+id/btnDivide"
                style="@style/ButtonOperation"
                android:text="@string/btn_divide_text"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn7"
                style="@style/ButtonDigit"
                android:text="@string/btn_7_text"
                />
            <Button
                android:id="@+id/btn8"
                style="@style/ButtonDigit"
                android:text="@string/btn_8_text"
                />
            <Button
                android:id="@+id/btn9"
                style="@style/ButtonDigit"
                android:text="@string/btn_9_text"
                />
            <Button
                android:id="@+id/btnMultiply"
                style="@style/ButtonOperation"
                android:text="@string/btn_multiply_text"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center" >
            <Button
                android:id="@+id/btn4"
                style="@style/ButtonDigit"
                android:text="@string/btn_4_text"
                />
            <Button
                android:id="@+id/btn5"
                style="@style/ButtonDigit"
                android:text="@string/btn_5_text"
                />
            <Button
                android:id="@+id/btn6"
                style="@style/ButtonDigit"
                android:text="@string/btn_6_text"
                />
            <Button
                android:id="@+id/btnMinus"
                style="@style/ButtonOperation"
                android:text="@string/btn_minus_text"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn1"
                style="@style/ButtonDigit"
                android:text="@string/btn_1_text"
                />
            <Button
                android:id="@+id/btn2"
                style="@style/ButtonDigit"
                android:text="@string/btn_2_text"
                />
            <Button
                android:id="@+id/btn3"
                style="@style/ButtonDigit"
                android:text="@string/btn_3_text"
                />
            <Button
                android:id="@+id/btnPlus"
                style="@style/ButtonOperation"
                android:text="@string/btn_plus_text"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btnPlusMinus"
                style="@style/ButtonOperation"
                android:text="@string/btn_plusMinus_text"
                />
            <Button
                android:id="@+id/btn0"
                style="@style/ButtonDigit"
                android:text="@string/btn_0_text"
                />
            <Button
                android:id="@+id/btnComa"
                style="@style/ButtonOperation"
                android:text="@string/btn_coma_text"
                />
            <Button
                android:id="@+id/btnEquals"
                style="@style/ButtonEquals"
                android:text="@string/btn_equals_text"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>
